	PR c++/10432 	* cp-tree.h (finish_declarator): Remove. 	* decl.c (cp_finish_decl): Make sure to pop_nested_class even for 	erroneous declarations. 	* semantics.c (finish_declarator): Remove.

PR c++/10432
	* g++.dg/parse/error1.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@67804 138bc75d-0d04-0410-961f-82ee72b054a4